JWT 登入 註冊, 帶 token 驗證測試
